--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-import streamlit as st
-import pandas as pd
-from sklearn.metrics.pairwise import cosine_similarity
-from sklearn.feature_extraction.text import TfidfVectorizer
+streamlit==1.32.2
+pandas==2.2.2
+scikit-learn==1.4.2
